complete modelling with 2769 data

--- a/2 days data.ipynb
+++ b/2 days data.ipynb
@@ -725,10 +725,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data_2_periods = pd.concat([data_1,data_2])\n",
     "data_2_periods_df = data_2_periods.drop(['measurement_result_date'],axis=1)\n",
@@ -1332,7 +1332,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### "
+    "### form proper x-axis for scatter\n",
+    "\n",
+    "* need change"
    ]
   },
   {
