--- a/build dataset.ipynb
+++ b/build dataset.ipynb
@@ -1585,6 +1585,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2769 entries, 0 to 2768\n",
+      "Columns: 389 entries, average_result_value to res_temperature\n",
+      "dtypes: float64(388), int64(1)\n",
+      "memory usage: 8.2 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tem.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
